--- a/Parameter.Services/Parameter.Services.csproj
+++ b/Parameter.Services/Parameter.Services.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="4.0.6.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Parameter.Entites\Parameter.Entites.csproj" />
+  </ItemGroup>
+
 </Project>
