--- a/Parameter.Desktop/Parameter.Desktop.csproj
+++ b/Parameter.Desktop/Parameter.Desktop.csproj
@@ -7,7 +7,12 @@
 		<Nullable>enable</Nullable>
 		<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
+		<AssemblyTitle>Parameter</AssemblyTitle>
+		<ApplicationIcon>logo.ico</ApplicationIcon>
 	</PropertyGroup>
+	<ItemGroup>
+	  <Content Include="logo.ico" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
