--- a/Parameter.Desktop/Parameter.Desktop.csproj
+++ b/Parameter.Desktop/Parameter.Desktop.csproj
@@ -5,11 +5,12 @@
 	One for Windows with net10.0-windows TFM, one for MacOS with net10.0-macos and one with net10.0 TFM for Linux.-->
 		<TargetFramework>net10.0</TargetFramework>
 		<Nullable>enable</Nullable>
-		<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+		<BuiltInComInteropSupport>false</BuiltInComInteropSupport>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<AssemblyTitle>Parameter</AssemblyTitle>
 		<ApplicationIcon>logo.ico</ApplicationIcon>
 	</PropertyGroup>
+
 	<ItemGroup>
 	  <Content Include="logo.ico" />
 	</ItemGroup>
