--- a/Parameter/Parameter.csproj
+++ b/Parameter/Parameter.csproj
@@ -4,12 +4,11 @@
 		<TargetFramework>net10.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
-		<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+		<BuiltInComInteropSupport>false</BuiltInComInteropSupport>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
 
 		<ApplicationIcon>Assets\Images\logo.ico</ApplicationIcon>
-
 
 		<IsAotCompatible>true</IsAotCompatible>
 	</PropertyGroup>
